<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".quiz">

        <TextView
            android:id="@+id/quizname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/titleresult"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#F7F9BF"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/resultpng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/oily"
                android:contentDescription="@string/todoresultpng" />

            <TextView
                android:id="@+id/resulttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resulttext"
                android:textColor="#363A43"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resultmun"
                android:textColor="#7A8089"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btn_testend"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:backgroundTint="#947EBE"
        android:onClick="testend"
        android:text="@string/endtest"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationY="45dp"
        app:cornerRadius="100dp"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <ImageView
        android:id="@+id/dottedbg"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:contentDescription="@string/todoresultbg"
        android:translationY="100dp"
        app:srcCompat="@drawable/dottedbg"
        tools:ignore="ImageContrastCheck" />

</LinearLayout>