<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".question"
    android:orientation="vertical"
    >


    <androidx.cardview.widget.CardView
        android:id="@+id/card_question"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="10dp"
        >

        <TextView
            android:id="@+id/text_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:drawable="@color/green"
        android:state_pressed="true"
        android:id="@+id/card_optiona"
        android:layout_width="250sp"
        android:layout_height="55sp"
        android:onClick="OptClicka"
        app:cardCornerRadius="100sp"
        tools:ignore="UsingOnClickInXml"
        android:translationY="25sp"
        android:layout_gravity="center"
        android:focusable="true"
        android:clickable="true">


        <TextView
            android:id="@+id/text_optiona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/a"
            android:textColor="@color/black">

        </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_optionb"
        android:layout_width="250sp"
        android:layout_height="55sp"
        android:onClick="OptClickb"
        app:cardCornerRadius="100sp"
        tools:ignore="UsingOnClickInXml"
        android:translationY="40sp"
        android:layout_gravity="center"
        android:focusable="true"
        android:clickable="true"
        >

        <TextView
            android:id="@+id/text_optionb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/b"
            android:textColor="@color/black">

        </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_optionc"
        android:layout_width="250sp"
        android:layout_height="55sp"
        android:onClick="OptClickc"
        app:cardCornerRadius="100sp"
        tools:ignore="UsingOnClickInXml"
        android:translationY="55sp"
        android:layout_gravity="center"
        android:focusable="true"
        android:clickable="true"
        >

        <TextView
            android:id="@+id/text_optionc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/c"
            android:textColor="@color/black">

        </TextView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_optiond"
        android:layout_width="250sp"
        android:layout_height="55sp"
        android:onClick="OptClickd"
        app:cardCornerRadius="100sp"
        tools:ignore="UsingOnClickInXml"
        android:translationY="70sp"
        android:layout_gravity="center"
        android:focusable="true"
        android:clickable="true"
        >

        <TextView
            android:id="@+id/text_optiond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/d"
            android:textColor="@color/black">

        </TextView>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/nextBtn"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:background="@drawable/next_btn_shape"
        android:backgroundTint="#947EBE"
        android:gravity="center"
        android:translationY="110sp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nextto"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/bg1"
        android:layout_width="620sp"
        android:layout_height="135sp"
        android:contentDescription="@string/textbg"
        android:translationX="-100sp"
        app:srcCompat="@drawable/dottedbg"
        tools:ignore="ImageContrastCheck"
        android:translationY="123sp"
        />
</LinearLayout>