<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background_gradient"
tools:context=".MainActivity">


<ImageView
    android:id="@+id/logo"
    android:layout_width="410dp"
    android:layout_height="517dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    app:srcCompat="@drawable/logo"
    android:contentDescription="@string/todo" />

<TextView
    android:id="@+id/appname"
    android:layout_width="205dp"
    android:layout_height="51dp"
    android:fontFamily="serif-monospace"
    android:text="@string/venus"
    android:textAlignment="center"
    android:textAllCaps="false"
    android:textColor="#000000"
    android:textSize="48sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/logo"
    app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/start"
        android:layout_width="259dp"
        android:layout_height="59dp"
        android:backgroundTint="#947EBE"
        android:onClick="start"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname"
        app:layout_constraintVertical_bias="0.35"
        tools:ignore="UsingOnClickInXml,TextContrastCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>